2004-04-12  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/RandomAccessFile/jdk11.java: Show IOException in
	debug mode.

2004-04-12  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/ObjectInputOutput/Compat1.java: Use check with
	two argument, not equals(), to show what is actually different.

2004-04-09  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/lang/Character/unicode.java: Numerous fixes.
	Use Unicode 3.0.0 code tables.  Reimplemented various tests to
	match the javadoc for java.lang.Character in JDK 1.4.  Refactored
	to make it easier for someone to implement JDK 1.3, etc versions
	of this testcase.
	* gnu/testlet/java/lang/Character/UnicodeBase.java: new file
	* gnu/testlet/java/lang/Character/UnicodeData-3.0.0.txt: new file

2004-04-07  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/io/ObjectInput/Test.java: New test (FinalField) to
	check that ObjectInputStream is able to set final fields.

	* gnu/testlet/java/io/ObjectInput/Test$FinalField.data: New reference
	data.

2004-04-05  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/lang/Character/unicode.java: Fixed up crappy 
	indentation, etc prior to making some real fixes.

2004-03-26  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/ObjectInputOutput/Compat2.java: Explicitly set
	serialVersionUID. Make debug messages more clear.

2004-03-25  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/io/ObjectInputOutput/Compat2.java: Check the right
	thing according to classpath policy (this test fails on JDK).

2004-03-24  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/text/SimpleDateFormat/attribute.java: New tests.

	* gnu/testlet/java/text/DecimalFormat/parse.java: Fixed test to be
	spec compliant (Long is just a guess, it may change with
	implementation).

2004-03-24  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/javax/imageio, gnu/testlet/javax/imageio/spi,
	gnu/testlet/javax/imageio/spi/ServiceRegistry: New directories.
	